--- a/animelister/templates/base.html
+++ b/animelister/templates/base.html
@@ -4,17 +4,23 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
     <script src="https://unpkg.com/htmx.org@1.6.0"></script>
+    <script src="//unpkg.com/alpinejs" defer></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
-
+    <style>
+      .messages {
+        position: fixed;
+        left: 40px;
+        bottom: 40px;
+      }
+    </style>
     {% block extra_head %}
     <title>Lightmatter</title>
     {% endblock extra_head %}
     {% load django_htmx %}
     {% django_htmx_script %}
   </head>
-  <body >
+  <body hx-boost="true">
       <div class="{% block body_class %}{% endblock body_class %}">
       {% include "header.html" %}
 
@@ -22,14 +28,8 @@
           {% block content %}
           {% endblock content %}
       </div>
-
+      {% include "messages.html" %}
       {% include "footer.html" %}
       </div>
-      <script>
-        htmx.logAll();
-        document.body.addEventListener('htmx:configRequest', (event) => {
-          event.detail.headers['X-CSRFToken'] = '{{ csrf_token }}';
-        })
-      </script>
   </body>
 </html>
