--- a/animelister/templates/base.html
+++ b/animelister/templates/base.html
@@ -4,7 +4,10 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <script src="https://unpkg.com/htmx.org@1.6.0"></script>
+
+    {% block htmx_script %}
+      <script src="{% static "js/htmx.js" %}">
+    {% endblock htmx_script %}
     <script src="//unpkg.com/alpinejs" defer></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
     <style>
