switching to poetry

--- a/animelister/templates/base.html
+++ b/animelister/templates/base.html
@@ -16,6 +16,24 @@
         left: 40px;
         bottom: 40px;
       }
+      .id {
+        width: 10%;
+      }
+      .name {
+        width: 40%;
+      }
+      .avg_rating, .status, .season {
+        width: 10%;
+      }
+      .genre {
+        width: 20%
+      }
+      #loading-body{
+        position: fixed;
+        top: 50%;
+        z-index:40;
+      }
+
     </style>
     {% block extra_head %}
     <title>Lightmatter</title>
