--- a/animelister/templates/home/index.html
+++ b/animelister/templates/home/index.html
@@ -6,17 +6,22 @@ Lightmatter Base Install
 
 
 {% block content %}
-  <table class="table container" style="width:100%;" >
-    <thead>
+  <center>
+    <img class="htmx-indicator" id="loading-body" src="{% static "img/bars.svg" %}"/>
+  </center>
+  <table class="table container" style="width:100%;" hx-indicator=".htmx-table-loading" >
+    <thead hx-indicator=".htmx-page">
       <tr>
         {% for sort_key, title in table_headers.items %}
-          <th><a href="?sort={% if request.GET.sort == sort_key %}-{% endif %}{{sort_key}}" hx-indicator="#loading-body" >{{title}}</th>
+          <th class="{{sort_key}}" ><a href="?sort={% if request.GET.sort == sort_key %}-{% endif %}{{sort_key}}" hx-indicator="#loading-body" >{{title}}</th>
         {% endfor %}
       </tr>
     </thead>
   <tbody class="anime-body">
     {% include "home/partials/anime_table.html" with animes=animes %}
   </tbody>
-  <tbody class="loading-body htmx-indicator"></tbody>
   </table>
+  <center>
+    <img class="htmx-indicator htmx-table-loading" src="{% static "img/bars.svg" %}"/>
+  </center>
 {% endblock content %}
