--- a/animelister/templates/home/partials/anime_table.html
+++ b/animelister/templates/home/partials/anime_table.html
@@ -1,7 +1,7 @@
 {% for anime in animes %}
-  <tr {% if forloop.last %}hx-get="{% url "index" %}?{{next_page_qs}}" hx-trigger="revealed" hx-swap="afterend" {% endif %}>
+  <tr {% if forloop.last and next_page_qs %}hx-get="{% url "index" %}?{{next_page_qs}}" hx-trigger="revealed" hx-swap="afterend" {% endif %}>
   <th>{{anime.id}}</th>
-  <td><a href={{anime.get_absolute_url}} > {{ anime }}</a></td>
+  <td><a hx-swap="unset" href="{{anime.get_absolute_url}}" > {{ anime }}</a></td>
       <td>{{anime.avg_rating}}</td>
       <td>{{anime.status}}</td>
       <td>{{anime.season}}</td>
