--- a/animelister/templates/base.html
+++ b/animelister/templates/base.html
@@ -6,7 +6,7 @@
 
 
     {% block htmx_script %}
-      <script src="{% static "js/htmx.js" %}">
+      <script src="{% static "js/htmx.js" %}"></script>
     {% endblock htmx_script %}
     <script src="//unpkg.com/alpinejs" defer></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
@@ -53,4 +53,9 @@
       {% include "footer.html" %}
       </div>
   </body>
+  <script>
+    document.body.addEventListener('htmx:configRequest', (event) => {
+      event.detail.headers['X-CSRFToken'] = '{{ csrf_token }}';
+  })
+  </script>
 </html>
