playing around with vue

--- a/animelister/templates/base.html
+++ b/animelister/templates/base.html
@@ -19,7 +19,7 @@
 
 
   </head>
-  <body hx-boost="true" hx-push-url="true">
+  <body hx-boost="true" hx-push-url="true" v-scope>
       <div class="{% block body_class %}{% endblock body_class %}">
       {% include "header.html" %}
 
