--- a/animelister/templates/header.html
+++ b/animelister/templates/header.html
@@ -9,5 +9,6 @@
     {% endif %}
     <p v-scope>Global ${ store.count }</p>
     <a href="{% url "anime-create" %}"> Create anime </a>
+    <i class="far fa-user"></i>
   </nav>
 </header>
