--- a/animelister/templates/home/index.html
+++ b/animelister/templates/home/index.html
@@ -9,20 +9,5 @@ Lightmatter Base Install
   <center>
     <img class="htmx-indicator" id="loading-body" src="{% static "img/bars.svg" %}"/>
   </center>
-
-  <table class="table-fixed max-w-full" hx-indicator=".htmx-table-loading" >
-    <thead hx-indicator=".htmx-page">
-      <tr>
-        {% for sort_key, title in table_headers.items %}
-          <th class="{{sort_key}}" ><a href="?sort={% if request.GET.sort == sort_key %}-{% endif %}{{sort_key}}" hx-indicator="#loading-body" >{{title}}</th>
-        {% endfor %}
-      </tr>
-    </thead>
-  <tbody class="anime-body">
-    {% include "home/partials/anime_table.html" with animes=animes %}
-  </tbody>
-  </table>
-  <center>
-    <img class="htmx-indicator htmx-table-loading" src="{% static "img/bars.svg" %}"/>
-  </center>
+  {% component 'anime-table' animes=animes next_page_qs=next_page_qs %}
 {% endblock content %}
