--- a/animelister/templates/messages.html
+++ b/animelister/templates/messages.html
@@ -1,18 +1,3 @@
 {% for message in messages %}
-  <li hx-swap-oob="beforeend:#messages"  >
-    <div v-scope="{visible: true}" v-show="visible" class="notification {% if message.tags %}{{ message.tags }}{% endif %}">
-      <button class="delete" @click="visible = false"></button>
-      {{message}}
-
-      <div v-scope="Counter({ initialCount: 10 })" @mounted="mounted">
-        <p>${ count }</p>
-        <button @click="inc">increment</button>
-      </div>
-
-      <div v-scope="Counter({ initialCount: 20 })">
-        <p>${ count }</p>
-        <button @click="inc">increment</button>
-      </div>
-    </div>
-  </li>
+  {% component "flash-message" message=message %}
 {% endfor %}
